<?xml version="1.0"?>
<package>
  <name>edy_dualarm_experiment</name>
  <version>0.5.7</version>
  <description>Experiment package for edy</description>

  <maintainer email="rxu72@gatech.edu">Ruinian Xu</maintainer>
  <license>BSD</license>
  <author email="rxu72@gatech.edu">Ruinian Xu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>

</package>
